# SpotifyPlaylistGenerator

./: .spotify_cache  README.md  app.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: python-tests.yml
src/spotify_playlist_generator/: __init__.py  utils.py
src/spotify_playlist_generator/models/: __init__.py  playlist.py
src/spotify_playlist_generator/services/: __init__.py  auth_service.py  lastfm_service.py  spotify_service.py
src/spotify_playlist_generator/ui/: __init__.py  app.py  template_loader.py  ui_components.py
src/spotify_playlist_generator/ui/templates/: auth_error.html  auth_success.html  no_code.html
tests/: __init__.py  conftest.py
tests/unit/: test_template_loader.py  test_utils.py
tests/unit/spotify_playlist_generator/: __init__.py
tests/unit/spotify_playlist_generator/models/: __init__.py  test_playlist.py
tests/unit/spotify_playlist_generator/services/: __init__.py  test_auth_service.py  test_lastfm_service.py  test_spotify_service.py
